--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -7,7 +7,52 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{marina,
+	abstract = {Resumo. A utiliza{\c{c}}{\~{a}}o de mapas conceituais como ferramenta de apoio ao processo de aprendizagem traz consigo uma sobrecarga de trabalho para o professor, podendo at{\'{e}} mesmo inviabilizar a utiliza{\c{c}}{\~{a}}o dos mesmos. Este artigo fala sobre a utiliza{\c{c}}{\~{a}}o de mapas conceituais na avalia{\c{c}}{\~{a}}o da aprendizagem e da import{\^{a}}ncia de um sistema automatizado para apoiar o professor nesta tarefa. Apresenta-se tamb{\'{e}}m uma proposta de como automatizar a verifica{\c{c}}{\~{a}}o de certos aspectos da aprendizagem explicitados em um mapa conceitual constru{\'{i}}do por um estudante. A proposta inclui o apoio {\`{a}} compara{\c{c}}{\~{a}}o de mapas constru{\'{i}}dos ao longo do curso como uma forma de avaliar a evolu{\c{c}}{\~{a}}o da aprendizagem. Palavras-chave: mapas conceituais, avalia{\c{c}}{\~{a}}o da aprendizagem, apoio automatizado Abstract. The use of conceptual maps to support learning processes in a class, brings about an extra effort to the teacher, that could even block its use. This paper is about the use of conceptual maps in learning assessment and the importance of an automatic system to support the teacher on this task. A model for automatically verifying some learning aspects explicit in a conceptual map constructed by a student is also proposed, which includes the support for comparing different conceptual maps constructed by the student as a way to assess the learning evolution.},
+	author = {Marina, Ana and Ara{\'{u}}jo, Teixeira and {Silva De Menezes}, Credin{\'{e}} and Cury, Davidson},
+	file = {:home/israel/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Marina et al. - Unknown - Apoio Automatizado {\`{a}} Avalia{\c{c}}{\~{a}}o da Aprendizagem Utilizando Mapas Conceituais.pdf:pdf},
+	keywords = {automatic support,conceptual maps,learning assessment},
+	title = {{Apoio Automatizado {\`{a}} Avalia{\c{c}}{\~{a}}o da Aprendizagem Utilizando Mapas Conceituais}}
+}
+@article{Perin2014,
+	author = {Perin, Wagner de Andrade},
+	title = {{iMap – UM MECANISMO DE INFER{\^{E}}NCIA PARA MAPAS CONCEITUAIS}},
+	year = {2014}
+}
 
+@article{ausubel1963,
+	Address = {New York},
+	Author = {D. P. Ausubel},
+	Publisher = {Grune
+	and Stratton},
+	Title = {The psychology of meaningful verbal learning},
+	Year = {1963}}
+
+@article{Novak2005,
+	author = {Novak, Joseph D.},
+	doi = {10.1007/s11165-004-3431-4},
+	isbn = {1626008914},
+	issn = {0157-244X},
+	journal = {Research in Science Education},
+	keywords = {Genodiversity,PCB,PGPR,Pseudomonads,Rep-PCR,Rhizosphere,Siderophores},
+	month = {mar},
+	number = {1},
+	pages = {23--40},
+	pmid = {15974422},
+	title = {{Results and Implications of a 12-Year Longitudinal Study of Science Concept Learning}},
+	url = {http://link.springer.com/10.1007/s11165-004-3431-4},
+	volume = {35},
+	year = {2005}
+}
+
+@book{novak1984,
+	Address = {New York},
+	Author = {Joseph D. Novak, D. Bob Godwin},
+	Edition = {1},
+	Organization = {Cambridge University},
+	Publisher = {Cambridge University Press},
+	Title = {Learning how to learn},
+	Year = {1984}}
 
 @book{ibge1993,
 	Address = {Rio de Janeiro},
