--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -452,7 +452,7 @@ incompatíveis com as customizações promovidas. Consulte
 
 Este documento deve ser utilizado como complemento dos manuais do \abnTeX\ 
 \cite{abntex2classe,abntex2cite,abntex2cite-alf} e da classe \textsf{memoir}
-\cite{memoir}. 
+\cite{marina}. 
 
 Esperamos, sinceramente, que o \abnTeX\ aprimore a qualidade do trabalho que
 você produzirá, de modo que o principal esforço seja concentrado no principal:
@@ -465,7 +465,7 @@ Lauro César Araujo
 % ----------------------------------------------------------
 % PARTE
 % ----------------------------------------------------------
-\part{Preparação da pesquisa}
+%\part{Preparação da pesquisa}
 % ----------------------------------------------------------
 
 % ---
@@ -477,27 +477,47 @@ Lauro César Araujo
 % ----------------------------------------------------------
 % PARTE
 % ----------------------------------------------------------
-\part{Referenciais teóricos}
+%\part{Referenciais teóricos}
 % ----------------------------------------------------------
 
 % ---
 % Capitulo de revisão de literatura
 % ---
-\chapter{Lorem ipsum dolor sit amet}
+\chapter{Mapas conceituais}
 % ---
-
+%O que são? Quem criou? Quando surgiu? Quais os benefícios para a educação?
 % ---
-\section{Aliquam vestibulum fringilla lorem}
+\section{A definição de mapas conceituais}
 % ---
+Os mapas conceituais são uma ferramenta gráfica utilizada para representação do conhecimento, esta representação é constituida por relações entre conceitos na forma de proposições. Cada proposição é formada por dois ou mais conceitos interligados por uma palavra, que descreve a relação entre os conceitos. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
 
-\lipsum[1]
+\begin{figure}[htb]
+	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual}
+	\begin{center}
+		\includegraphics[scale=0.3]{mapaconceitual.png}
+	\end{center}
+	\legend{Fonte: \cite[p. 28]{Perin2014}}
+\end{figure}
 
-\lipsum[2-3]
+\section{Mapas conceituais e educação}
+O mapas conceituais foram criados na década de 70 durante um estudo de Novak que buscava entender como crianças aprendiam conceitos científicos \cite{Novak2005}. Durante seu estudo, Novak observou uma evolução nas proposições utilizadas pelas crianças, porém teve dificuldade de entender como esta mudança congnitiva ocorreu. Para compreender as mudanças na estruturas cognitivas observadas no estudo a equipe de pesquisa de Novak se baseou nas três ideias de Ausubel sobre a teoria da aprendizagem \cite{ausubel1963}.
+\begin{citacao}[english]
+	First, Ausubel sees the development
+	of new meanings as building on prior relevant concepts and propositions. Second,
+	he sees cognitive structure as organised hierarchically, with more general, more in-
+	clusive concepts occupying higher levels in the hierarchy and more specific, less
+	inclusive concepts subsumed under the more general concepts. Third, when mean-
+	ingful learning occurs, relationships between concepts become more explicit, more
+	precise, and better integrated with other concepts and propositions\cite{Novak2005}.
+\end{citacao}
+%\lipsum[1]
+
+%\lipsum[2-3]
 
 % ----------------------------------------------------------
 % PARTE
 % ----------------------------------------------------------
-\part{Resultados}
+%\part{Resultados}
 % ----------------------------------------------------------
 
 % ---
