--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -20,11 +20,18 @@
 	year = {2014}
 }
 
+@article{Dutra2002,
+	author = {Dutra, {\'{I}}talo Modesto and Fagundes, L{\'{e}}a da Cruz and Ca{\~{n}}as, Alberto J.},
+	journal = {XIII Simp{\'{o}}sio Brasileiro de Inform{\'{a}}tica na Educa{\c{c}}{\~{a}}o - SBIE - Unisinos},
+	pages = {49--59},
+	title = {{Um ambiente integrado para apoiar a avalia{\c{c}}{\~{a}}o da aprendizagem baseado em mapas conceituais}},
+	year = {2002}
+}
+
 @article{ausubel1963,
 	Address = {New York},
 	Author = {D. P. Ausubel},
-	Publisher = {Grune
-	and Stratton},
+	Publisher = {Grune and Stratton},
 	Title = {The psychology of meaningful verbal learning},
 	Year = {1963}}
 
