--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -52,6 +52,15 @@
 	year = {2005}
 }
 
+@book{gouvea2006,
+	Address = {Rio de Janeiro},
+	Author = {G. Gouv{\^e}a, C. I. Oliveira},
+	Edition = {4},
+	Organization = {Vieira e Lent},
+	Publisher = {Vieira e Lent},
+	Title = {Educação a Dist{\^a}ncia na  forma{\c c}{\~a}o  de professores: viabilidades, potencialidades e limites.},
+	Year = {2006}}
+
 @book{novak1984,
 	Address = {New York},
 	Author = {Joseph D. Novak, D. Bob Godwin},
