--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -68,7 +68,7 @@
 % ---
 % Pacotes de citações
 % ---
-\usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citações na bibl
+%\usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citações na bibl
 \usepackage[alf]{abntex2cite}	% Citações padrão ABNT
 
 % --- 
@@ -78,18 +78,18 @@
 % ---
 % Configurações do pacote backref
 % Usado sem a opção hyperpageref de backref
-\renewcommand{\backrefpagesname}{Citado na(s) página(s):~}
+%\renewcommand{\backrefpagesname}{Citado na(s) página(s):~}
 % Texto padrão antes do número das páginas
-\renewcommand{\backref}{}
+%\renewcommand{\backref}{}
 % Define os textos da citação
-\renewcommand*{\backrefalt}[4]{
-	\ifcase #1 %
-		Nenhuma citação no texto.%
-	\or
-		Citado na página #2.%
-	\else
-		Citado #1 vezes nas páginas #2.%
-	\fi}%
+%\renewcommand*{\backrefalt}[4]{
+%	\ifcase #1 %
+%		Nenhuma citação no texto.%
+%	\or
+%		Citado na página #2.%
+%	\else
+%		Citado #1 vezes nas páginas #2.%
+%	\fi}%
 % ---
 
 % ---
@@ -465,7 +465,7 @@ Os mapas conceituais tem se destacado como alternativa a avaliação tradicional
 
 Os mapas conceituais podem ter diversas aplicações na educação, podem ser utilizados para representar o conhecimento adquirido em uma aula, ou então o conteúdo de um capítulo algum livro lido. Por se tratar de uma representação que é alimentada com novos conceitos conforme eles são adquiridos, pode ser utilizado pelo professor para acomapanhar a aprendizagem de um estudante durante todo o período de um curso.
 
-  
+\section{Aplicação de mapas conceituais}
 
 %\lipsum[1]
 
@@ -482,10 +482,18 @@ Os mapas conceituais podem ter diversas aplicações na educação, podem ser ut
 % ---
 \chapter{Educação a distância}
 % ---
-
+%O que é a educação a distância?
+%Qual é a origem da educação a distância?
+%Qual é a importancia da educação a distância?
+%Quais são as ferramentas de educação a distância?
+%O Moodle
+%Mapas conceituais e educação a distância.
 % ---
-\section{Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-posuere cubilia Curae}
+\section{Teoria e origem da educação a distância}
+A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Àsia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.%citar
+\section{Plataformas de educação a distância}
+\section{O moodle}
+\section{Mapas conceituais e educação a distância}
 % ---
 
 \lipsum[21-22]
@@ -495,7 +503,9 @@ posuere cubilia Curae}
 % ---
 \chapter{CMPAAS}
 % ---
-
+%O que é o CMPAAS?
+%Quando foi criado?
+%Porque foi criado? Qual é a sua importância?
 % ---
 \section{Pellentesque sit amet pede ac sem eleifend consectetuer}
 % ---
@@ -504,7 +514,10 @@ posuere cubilia Curae}
 
 \chapter{Interoperabilidade de sistemas}
 % ---
-
+%O que é?
+%Para que serve?
+%Como é implementada?
+%Json
 % ---
 \section{Pellentesque sit amet pede ac sem eleifend consectetuer}
 % ---
@@ -513,7 +526,9 @@ posuere cubilia Curae}
 
 \chapter{Plugin}
 % ---
-
+%O que é um plugin do moodle?
+%Como é feito o plugin?
+%Como foi feito o plugin
 % ---
 \section{Pellentesque sit amet pede ac sem eleifend consectetuer}
 % ---
