--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -435,29 +435,26 @@
 % ---
 %O que são? Quem criou? Quando surgiu? Quais os benefícios para a educação?
 % ---
-\section{A definição de mapas conceituais}
+\section{A história e definição de mapas conceituais}
 % ---
-Os mapas conceituais são uma ferramenta gráfica utilizada para representação do conhecimento, esta representação é constituida por relações entre conceitos na forma de proposições. Cada proposição é formada por dois ou mais conceitos interligados por uma palavra, que descreve a relação entre os conceitos. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
+O mapas conceituais foram criados na década de 70 durante um estudo de Novak que buscava entender como crianças aprendiam conceitos científicos \cite{Novak2005}. Durante seu estudo, Novak observou uma evolução nas proposições utilizadas pelas crianças, porém teve dificuldade de entender como esta mudança congnitiva ocorreu. Para compreender as mudanças na estruturas cognitivas observadas no estudo a equipe de pesquisa de Novak se baseou nas três ideias de Ausubel sobre a teoria da aprendizagem \cite{ausubel1963}. A primeira ideia é que novos significados são criados a partir de conceitos e proposições previamente conhecidos pelo aprendiz. A segunda, é que a estrutura cognitiva do indivíduo é organizada hierarquicamente, com conceitos mais gerais ocupando posições superiores, acima dos conceitos mais específicos e complexos. Já a terceira idéia é que durante o processo de aprendizagem os conceitos vão se tornando mais específicos e precisos.
+
+\begin{citacao}[english]
+	First, Ausubel sees the development
+	of new meanings as building on prior relevant concepts and propositions. Second,
+	he sees cognitive structure as organised hierarchically, with more general, more inclusive concepts occupying higher levels in the hierarchy and more specific, less
+	inclusive concepts subsumed under the more general concepts. Third, when meaningful learning occurs, relationships between concepts become more explicit, more
+	precise, and better integrated with other concepts and propositions\cite{Novak2005}.
+\end{citacao}
+
+Assim foi criada a ferramenta gráfica mapas conceituais, que tem como objetivo fazer uma representação do conhecimento. Um mapa conceitual é constituido por interligações de conceitos, formando proposições. Uma proposição consiste na ligação entre dois ou mais conceitos através de uma palavra de forma a gerar um significado. Em um mapa conceitual os conceitos mais gerais estão dispostos no topo do mapa e os mais específicos na parte inferior dele. Um mapa conceitual é construido ligando-se um conceito a outro, através de um arco que contém uma palavra descritiva, que é usada para criar uma relação significativa entre os conceitos. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
 
 \begin{figure}[htb]
 	\begin{center}
 		\includegraphics[scale=0.3]{mapaconceitual.png}
 	\end{center}
-	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual Fonte: \cite[p. 28]{Perin2014}}
+	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual. Fonte: \cite[p. 28]{Perin2014}}
 \end{figure}
-
-
-O mapas conceituais foram criados na década de 70 durante um estudo de Novak que buscava entender como crianças aprendiam conceitos científicos \cite{Novak2005}. Durante seu estudo, Novak observou uma evolução nas proposições utilizadas pelas crianças, porém teve dificuldade de entender como esta mudança congnitiva ocorreu. Para compreender as mudanças na estruturas cognitivas observadas no estudo a equipe de pesquisa de Novak se baseou nas três ideias de Ausubel sobre a teoria da aprendizagem \cite{ausubel1963}.
-\begin{citacao}[english]
-	First, Ausubel sees the development
-	of new meanings as building on prior relevant concepts and propositions. Second,
-	he sees cognitive structure as organised hierarchically, with more general, more in-
-	clusive concepts occupying higher levels in the hierarchy and more specific, less
-	inclusive concepts subsumed under the more general concepts. Third, when mean-
-	ingful learning occurs, relationships between concepts become more explicit, more
-	precise, and better integrated with other concepts and propositions\cite{Novak2005}.
-\end{citacao}
-Assim foi criada a ferramenta gráfica mapas conceituais, que consiste em conceitos interligados por uma palavra descritiva, formando proposições, e organizada de forma hierárquica, onde os conceitos mais gerais estão dispostos no topo do mapa e os mais específicos na parte inferior dele.
 \section{Mapas conceituais e educação}
 A confiabilidade da avaliação da aprendizagem tradicional,como textos dissertativos e questões de multipla escolha, tem sido questionada por pesquisadores e educadores. Nestes tipos de teste apenas os acertos são contabilizados e os erros são descartados, isto pode fazer com que informações importantes para a avaliação sejam deprezadas.
 As provas tradicionais não proporcionam a possibilidade do estudante apresentar como construiu o seu aprendizado. Elas conseguem avaliar somente a aprendizagem mecânica, não mostrando como que o aprendiz alterou suas estruturas cognitivas.
