revisão das secoes 2.1 e 2.2

--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -14,8 +14,13 @@
 	keywords = {automatic support,conceptual maps,learning assessment},
 	title = {{Apoio Automatizado {\`{a}} Avalia{\c{c}}{\~{a}}o da Aprendizagem Utilizando Mapas Conceituais}}
 }
-@article{Perin2014,
+
+
+@MastersThesis{Perin2014,
 	author = {Perin, Wagner de Andrade},
+	file = {:home/israel/Downloads/iMAP um mecanismo de interfer{\^{e}}ncia para mapas conceituais.pdf:pdf},
+	pages = {120},
+	school = {Universidade Federal do Esp{\'{i}}rito Santo},
 	title = {{iMap – UM MECANISMO DE INFER{\^{E}}NCIA PARA MAPAS CONCEITUAIS}},
 	year = {2014}
 }
