--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -404,7 +404,7 @@
 % Introdução (exemplo de capítulo sem numeração, mas presente no Sumário)
 % ----------------------------------------------------------
 \chapter{Introdução}
-\addcontentsline{toc}{chapter}{Introdução}
+%\addcontentsline{toc}{chapter}{Introdução}
 % ----------------------------------------------------------
 
 
@@ -433,9 +433,9 @@
 % ---
 %O que são? Quem criou? Quando surgiu? Quais os benefícios para a educação?
 % ---
-\section{A história e definição de mapas conceituais}
+\section{Origem e definição de mapas conceituais}
 % ---
-O mapas conceituais foram criados na década de 70 durante um estudo de Novak que buscava entender como crianças aprendiam conceitos científicos \cite{Novak2005}. Durante seu estudo, Novak observou uma evolução nas proposições utilizadas pelas crianças, porém teve dificuldade de entender como esta mudança congnitiva ocorreu. Para compreender as mudanças na estruturas cognitivas observadas no estudo a equipe de pesquisa de Novak se baseou nas três ideias de Ausubel sobre a teoria da aprendizagem \cite{ausubel1963}. A primeira ideia é que novos significados são criados a partir de conceitos e proposições previamente conhecidos pelo aprendiz. A segunda, é que a estrutura cognitiva do indivíduo é organizada hierarquicamente, com conceitos mais gerais ocupando posições superiores, acima dos conceitos mais específicos e complexos. Já a terceira idéia é que durante o processo de aprendizagem os conceitos vão se tornando mais específicos e precisos.
+O mapas conceituais foram criados na década de 70 durante um estudo de Novak que buscava entender como crianças aprendiam conceitos científicos \cite{Novak2005}. Durante seu estudo, Novak observou uma evolução nas proposições utilizadas pelas crianças, porém teve dificuldade de entender como esta mudança congnitiva ocorreu. Para compreender as mudanças na estruturas cognitivas observadas Novak desenvolveu um método baseado nas três ideias de Ausubel sobre a teoria da aprendizagem \cite{ausubel1963}. A primeira ideia é que novos significados são criados a partir de conceitos e proposições previamente conhecidos pelo aprendiz. A segunda, é que a estrutura cognitiva do indivíduo é organizada hierarquicamente, com conceitos mais gerais ocupando posições superiores, acima dos conceitos mais específicos e complexos. Já a terceira idéia é que durante o processo de aprendizagem os conceitos vão se tornando mais específicos e precisos.
 
 \begin{citacao}[english]
 	First, Ausubel sees the development
@@ -445,22 +445,22 @@ O mapas conceituais foram criados na década de 70 durante um estudo de Novak qu
 	precise, and better integrated with other concepts and propositions\cite{Novak2005}.
 \end{citacao}
 
-Assim foi criada a ferramenta gráfica mapas conceituais, que tem como objetivo fazer uma representação do conhecimento. Um mapa conceitual é constituido por interligações de conceitos, formando proposições. Uma proposição consiste na ligação entre dois ou mais conceitos através de uma palavra de forma a gerar um significado. Em um mapa conceitual os conceitos mais gerais estão dispostos no topo do mapa e os mais específicos na parte inferior dele. Um mapa conceitual é construido ligando-se um conceito a outro, através de um arco que contém uma palavra descritiva, que é usada para criar uma relação significativa entre os conceitos. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
+Assim foi criada essa ferramenta gráfica, que tem como objetivo fazer uma representação do conhecimento. Um mapa conceitual é constituido por interligações entre dois ou mais conceitos através de uma palavra de forma a gerar um significado. Ele é construido ligando-se um conceito a outro, através de um arco que contém uma palavra descritiva, que é usada para criar uma relação significativa entre os conceitos. Além disso, os conceitos mais gerais estão dispostos no topo do mapa e os mais específicos na parte inferior dele. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
 
 \begin{figure}[htb]
 	\begin{center}
 		\includegraphics[scale=0.3]{mapaconceitual.png}
 	\end{center}
-	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual. Fonte: \cite[p. 28]{Perin2014}}
+	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual Fonte: \cite[p. 28]{Perin2014}.}
 \end{figure}
 \section{Mapas conceituais e educação}
-A confiabilidade da avaliação da aprendizagem tradicional,como textos dissertativos e questões de multipla escolha, tem sido questionada por pesquisadores e educadores. Nestes tipos de teste apenas os acertos são contabilizados e os erros são descartados, isto pode fazer com que informações importantes para a avaliação sejam deprezadas.
+Os mapas conceituais podem ter diversas aplicações na educação, podem ser utilizados para representar o conhecimento adquirido em uma aula, ou então o conteúdo de um capítulo algum livro lido. Por se tratar de uma representação que é alimentada com novos conceitos conforme eles são adquiridos, pode ser utilizado pelo professor para acompanhar a aprendizagem de um estudante durante todo o período de um curso. Além disso, como os mapas conseguem representar a estrutura cognitiva de um indivíduo, eles podem ser utilizados também como método de avaliação de aprendizagem\cite{Perin2014}.
+
+A confiabilidade da avaliação da aprendizagem tradicional,como textos dissertativos e questões de multipla escolha, tem sido questionada por pesquisadores e educadores. Nestes tipos de teste apenas os acertos são contabilizados e os erros são descartados, isto pode fazer com que informações importantes para a avaliação sejam desprezadas.
 As provas tradicionais não proporcionam a possibilidade do estudante apresentar como construiu o seu aprendizado. Elas conseguem avaliar somente a aprendizagem mecânica, não mostrando como que o aprendiz alterou suas estruturas cognitivas.
 Os mapas conceituais tem se destacado como alternativa a avaliação tradicional, pois conseguem demonstrar com facilidade as modificações cognitivas que ocorrem durante o processo de aprendizagem do estudante\cite{Dutra2002}.
 
-Os mapas conceituais podem ter diversas aplicações na educação, podem ser utilizados para representar o conhecimento adquirido em uma aula, ou então o conteúdo de um capítulo algum livro lido. Por se tratar de uma representação que é alimentada com novos conceitos conforme eles são adquiridos, pode ser utilizado pelo professor para acomapanhar a aprendizagem de um estudante durante todo o período de um curso.
-
-\section{Aplicação de mapas conceituais}
+\section{Mapas conceituais e tecnologia da informação}
 
 %\lipsum[1]
 
