adicao de conteudo na secao 2.3

--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -57,6 +57,37 @@
 	year = {2005}
 }
 
+@article{Canas2004,
+	author = {Ca{\~{n}}as, Alberto J and Hill, Greg and Carff, Roger and Suri, Niranjan and Lott, James and G{\'{o}}mez, Gloria and Eskridge, Thomas C and Arroyo, Mario and Carvajal, Rodrigo},
+	doi = {10.1.1.132.6645},
+	file = {:home/israel/Downloads/Canas{\_}2004{\_}Cmap{\_}tools.pdf:pdf},
+	isbn = {978-84-9769-066-9},
+	journal = {Concept Maps: Theory, Methodology, Technology. Proc. of the First Int. Conference on Concept Mapping},
+	keywords = {Aprendizaje Significativo,CMC2004,CmapTools,Mapas conceptuales. Teor{\'{i}}a,Paper},
+	number = {1984},
+	pages = {125--135},
+	title = {{CmapTools: A Knowledge Modeling and Sharing Environment}},
+	url = {http://eprint.ihmc.us/89/},
+	volume = {1},
+	year = {2004}
+}
+
+@article{Novak2006,
+	author = {Novak, Joseph D and Ca{\~{n}}as, Alberto J},
+	doi = {10.1057/palgrave.ivs.9500126},
+	file = {:home/israel/Downloads/Information Visualization-2006-Novak-175-84.pdf:pdf},
+	isbn = {14738716},
+	issn = {1473-8716},
+	journal = {Information Visualization},
+	keywords = {cmaptools,concept map,development,history,knowledge representation,meaningful learning,new model of education},
+	number = {3},
+	pages = {175--184},
+	title = {{The origins of the concept mapping tool and the continuing evolution of the tool}},
+	url = {http://ivi.sagepub.com/lookup/doi/10.1057/palgrave.ivs.9500126},
+	volume = {5},
+	year = {2006}
+}
+
 @book{gouvea2006,
 	Address = {Rio de Janeiro},
 	Author = {G. Gouv{\^e}a, C. I. Oliveira},
