--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -462,6 +462,13 @@ Os mapas conceituais tem se destacado como alternativa a avaliação tradicional
 
 \section{Mapas conceituais e tecnologia da informação}
 
+A construção de mapas conceituais com papel e caneta é muito simples, porém a tarefa de revisa-lo pode ser muito cansativa e consumir muito tempo. A introdução do uso de computadores na confecção de mapas pode facilitar a tarefa. Porém os primeiros programas de computadores criados com este objetivo se limitavam a mostrar os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. O software CmapTools alterou esta realidade, ao trazer a Internet para o contexto de criação de mapas conceituais.\cite{Novak2006}.
+
+\begin{citacao}[english]
+	CmapTools  is  a  software  environment  developed  at  the  Institute for Human and Machine Cognition (IHMC) that empowers users, individually or  collaboratively, to represent their knowledge using concept maps, to share them with peers and colleagues, and to publish them\cite{Canas2004}.
+\end{citacao}
+  
+
 %\lipsum[1]
 
 %\lipsum[2-3]
