--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -200,37 +200,36 @@
 %     \includepdf{fig_ficha_catalografica.pdf}
 % \end{fichacatalografica}
 
-\begin{fichacatalografica}
-	\sffamily
-	\vspace*{\fill}					% Posição vertical
-	\begin{center}					% Minipage Centralizado
-	\fbox{\begin{minipage}[c][8cm]{13.5cm}		% Largura
-	\small
-	\imprimirautor
-	%Sobrenome, Nome do autor
-	
-	\hspace{0.5cm} \imprimirtitulo  / \imprimirautor. --
-	\imprimirlocal, \imprimirdata-
-	
-	\hspace{0.5cm} \pageref{LastPage} p. : il. (algumas color.) ; 30 cm.\\
-	
-	\hspace{0.5cm} \imprimirorientadorRotulo~\imprimirorientador\\
-	
-	\hspace{0.5cm}
-	\parbox[t]{\textwidth}{\imprimirtipotrabalho~--~\imprimirinstituicao,
-	\imprimirdata.}\\
-	
-	\hspace{0.5cm}
-		1. Palavra-chave1.
-		2. Palavra-chave2.
-		2. Palavra-chave3.
-		I. Cury, Davidson.
-		II. Universidade Federal do Espírito Santo.
-		III. Faculdade de xxx.
-		IV. \imprimirtitulo 			
-	\end{minipage}}
-	\end{center}
-\end{fichacatalografica}
+%\begin{fichacatalografica}
+%	\sffamily
+%	\vspace*{\fill}					% Posição vertical
+%	\begin{center}					% Minipage Centralizado
+%	\fbox{\begin{minipage}[c][8cm]{13.5cm}		% Largura
+%	\small
+%	\imprimirautor
+%	%Sobrenome, Nome do autor
+%	
+%	\hspace{0.5cm} \imprimirtitulo  / \imprimirautor. --
+%	\imprimirlocal, \imprimirdata-
+%	
+%	\hspace{0.5cm} \pageref{LastPage} p. : il. (algumas color.) ; 30 cm.\\
+%	
+%	\hspace{0.5cm} \imprimirorientadorRotulo~\imprimirorientador\\
+%	
+%	\hspace{0.5cm}
+%	\parbox[t]{\textwidth}{\imprimirtipotrabalho~--~\imprimirinstituicao,
+%	\imprimirdata.}\\
+%	
+%	\hspace{0.5cm}
+%		1. Palavra-chave1.
+%		2. Palavra-chave2.
+%		2. Palavra-chave3.
+%		II. Universidade Federal do Espírito Santo.
+%		III. Faculdade de xxx.
+%		IV. \imprimirtitulo 			
+%	\end{minipage}}
+%	\end{center}
+%\end{fichacatalografica}
 % ---
 
 
@@ -464,11 +463,13 @@ Os mapas conceituais tem se destacado como alternativa a avaliação tradicional
 
 A construção de mapas conceituais é muito simples, uma caneta e um pedaço de papel são ferramentas suficientes para a confecção desse grafo. Porém a tarefa de revisa-lo, armazena-lo, e edita-lo a longo prazo  pode ser muito cansativa e complexa. A introdução do uso de computadores na confecção de mapas pode facilitar a tarefa \cite{Novak2006}.
 
-Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. O software CmapTools alterou esta realidade, ao trazer a Internet para o contexto de criação de mapas conceituais.
+Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais\cite{Perin2014}. Segundo a pesquisa de \citeonline{Perin2014}, apenas o software CmapTools pode ser considerada uma ferramenta que oferece suporte a criação de mapas conceituais.
 
 \begin{citacao}[english]
 	CmapTools  is  a  software  environment  developed  at  the  Institute for Human and Machine Cognition (IHMC) that empowers users, individually or  collaboratively, to represent their knowledge using concept maps, to share them with peers and colleagues, and to publish them\cite{Canas2004}.
 \end{citacao}
+
+Como grande parte das ferramentas para edição de mapas gráficos não foram desenvolvidas especificamente para prover um ambiente de criação de mapas conceituais é possível levantar a hipótese de que há uma carência deste tipo de software. Isto é um elemento motivador para a realização deste trabalho.
   
 
 %\lipsum[1]
